--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -4,11 +4,14 @@
     "next": "Next",
     "previous": "Previous",
     "tagline": "CLDR internationalization in Typescript, batteries-included",
+    "api-availablelocales": "availableLocales",
     "api-buddhistdate": "BuddhistDate",
     "api-calendardate": "CalendarDate",
     "api-cldr-calendars": "CLDR.Calendars",
     "api-cldr-general": "CLDR.General",
+    "api-cldr-locales": "CLDR.Locales",
     "api-cldr-numbers": "CLDR.Numbers",
+    "api-cldr-units": "CLDR.Units",
     "api-cldr": "CLDR",
     "api-currencyformatoptions": "CurrencyFormatOptions",
     "api-currencyformatstyletype": "CurrencyFormatStyleType",
@@ -20,7 +23,11 @@
     "api-gregoriandate": "GregorianDate",
     "api-iso8601date": "ISO8601Date",
     "api-japanesedate": "JapaneseDate",
+    "api-locale": "Locale",
+    "api-localematcher": "LocaleMatcher",
+    "api-parselocale": "parseLocale",
     "api-persiandate": "PersianDate",
+    "api-quantity": "Quantity",
     "api-roundingmodetype": "RoundingModeType",
     "api-unixepochtime": "UnixEpochTime",
     "doc-index": "Overview",
@@ -32,7 +39,8 @@
     "Github": "Github",
     "NPM": "NPM",
     "Introduction": "Introduction",
-    "API": "API"
+    "API": "API",
+    "Types": "Types"
   },
   "pages-strings": {
     "Help Translate|recruit community translators for your project": "Help Translate",
