--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -7,6 +7,7 @@
     "api-availablelocales": "availableLocales",
     "api-buddhistdate": "BuddhistDate",
     "api-calendardate": "CalendarDate",
+    "api-calendartype": "CalendarType",
     "api-cldr-calendars": "CLDR.Calendars",
     "api-cldr-general": "CLDR.General",
     "api-cldr-locales": "CLDR.Locales",
@@ -16,15 +17,19 @@
     "api-currencyformatoptions": "CurrencyFormatOptions",
     "api-currencyformatstyletype": "CurrencyFormatStyleType",
     "api-currencytype": "CurrencyType",
+    "api-dateformatoptions": "DateFormatOptions",
+    "api-dateskeleton": "Date skeleton",
     "api-datetimepatternfieldtype": "DateTimePatternFieldType",
     "api-decimal": "Decimal",
     "api-decimalformatoptions": "DecimalFormatOptions",
     "api-decimalformatstyletype": "DecimalFormatStyleType",
     "api-gregoriandate": "GregorianDate",
+    "api-index": "API",
     "api-iso8601date": "ISO8601Date",
     "api-japanesedate": "JapaneseDate",
     "api-locale": "Locale",
     "api-localematcher": "LocaleMatcher",
+    "api-numbersystemtype": "NumberSystemType",
     "api-parselocale": "parseLocale",
     "api-persiandate": "PersianDate",
     "api-quantity": "Quantity",
@@ -35,11 +40,12 @@
     "doc-locales": "Locales",
     "doc-math": "Arbitrary Precision Math",
     "Docs": "Docs",
-    "Live API": "Live API",
+    "API": "API",
+    "Live": "Live",
+    "Demo ": "Demo ",
     "Github": "Github",
     "NPM": "NPM",
     "Introduction": "Introduction",
-    "API": "API",
     "Types": "Types"
   },
   "pages-strings": {
