Added 'include' markdown plugin, more docs.
Added script to sanity-check sidebars.json

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -24,21 +24,24 @@
     "api-decimalformatoptions": "DecimalFormatOptions",
     "api-decimalformatstyletype": "DecimalFormatStyleType",
     "api-gregoriandate": "GregorianDate",
-    "api-index": "API",
     "api-iso8601date": "ISO8601Date",
     "api-japanesedate": "JapaneseDate",
+    "api-listpatterntype": "ListPatternType",
     "api-locale": "Locale",
     "api-localematcher": "LocaleMatcher",
     "api-numbersystemtype": "NumberSystemType",
     "api-parselocale": "parseLocale",
     "api-persiandate": "PersianDate",
     "api-quantity": "Quantity",
+    "api-relativetimeformatoptions": "RelativeTimeFormatOptions",
     "api-roundingmodetype": "RoundingModeType",
+    "api-unitformatoptions": "UnitFormatOptions",
+    "api-unitlength": "UnitLength",
     "api-unixepochtime": "UnixEpochTime",
     "doc-index": "Overview",
     "doc-init": "Initialization",
     "doc-locales": "Locales",
-    "doc-math": "Arbitrary Precision Math",
+    "doc-math": "Decimal Math",
     "Docs": "Docs",
     "API": "API",
     "Live": "Live",
