--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -6,6 +6,7 @@
     "tagline": "CLDR internationalization in Typescript, batteries-included",
     "api-availablelocales": "availableLocales",
     "api-buddhistdate": "BuddhistDate",
+    "api-bundle": "api-bundle",
     "api-calendardate": "CalendarDate",
     "api-calendartype": "CalendarType",
     "api-cldr-calendars": "CLDR.Calendars",
@@ -17,8 +18,9 @@
     "api-currencyformatoptions": "CurrencyFormatOptions",
     "api-currencyformatstyletype": "CurrencyFormatStyleType",
     "api-currencytype": "CurrencyType",
+    "api-date-time-skeleton": "Date and time skeleton",
     "api-dateformatoptions": "DateFormatOptions",
-    "api-dateskeleton": "Date skeleton",
+    "api-dateintervalformatoptions": "DateIntervalFormatOptions",
     "api-datetimepatternfieldtype": "DateTimePatternFieldType",
     "api-decimal": "Decimal",
     "api-decimalformatoptions": "DecimalFormatOptions",
@@ -49,7 +51,11 @@
     "Github": "Github",
     "NPM": "NPM",
     "Introduction": "Introduction",
-    "Types": "Types"
+    "Calendars": "Calendars",
+    "General": "General",
+    "Locales": "Locales",
+    "Numbers": "Numbers",
+    "Units": "Units"
   },
   "pages-strings": {
     "Help Translate|recruit community translators for your project": "Help Translate",
