Math examples, includes for Typescript, Markdown files.

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -43,7 +43,8 @@
     "doc-index": "Overview",
     "doc-init": "Initialization",
     "doc-locales": "Locales",
-    "doc-math": "Decimal Math",
+    "doc-math-example-factorial": "Example: memoizing factorial",
+    "doc-math": "Arbitrary Precision",
     "Docs": "Docs",
     "API": "API",
     "Live": "Live",
@@ -51,9 +52,10 @@
     "Github": "Github",
     "NPM": "NPM",
     "Introduction": "Introduction",
+    "Locales": "Locales",
+    "Math": "Math",
     "Calendars": "Calendars",
     "General": "General",
-    "Locales": "Locales",
     "Numbers": "Numbers",
     "Units": "Units"
   },
