More docs, add rebass, etc for liveapi

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -40,6 +40,8 @@
     "api-unitformatoptions": "UnitFormatOptions",
     "api-unitlength": "UnitLength",
     "api-unixepochtime": "UnixEpochTime",
+    "doc-design-bundles": "Resource bundles",
+    "doc-design": "Design",
     "doc-index": "Overview",
     "doc-init": "Initialization",
     "doc-locales": "Locales",
@@ -52,6 +54,7 @@
     "Github": "Github",
     "NPM": "NPM",
     "Introduction": "Introduction",
+    "Design": "Design",
     "Locales": "Locales",
     "Math": "Math",
     "Calendars": "Calendars",
