--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -45,7 +45,7 @@
     "doc-index": "Overview",
     "doc-init": "Initialization",
     "doc-locales": "Locales",
-    "doc-math-example-factorial": "Example: memoizing factorial",
+    "doc-math-example-factorial": "Example: factorial",
     "doc-math": "Arbitrary Precision",
     "Docs": "Docs",
     "API": "API",
