More docs, style tweaks.

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -28,6 +28,7 @@
     "api-gregoriandate": "GregorianDate",
     "api-iso8601date": "ISO8601Date",
     "api-japanesedate": "JapaneseDate",
+    "api-languagetag": "LanguageTag",
     "api-listpatterntype": "ListPatternType",
     "api-locale": "Locale",
     "api-localematcher": "LocaleMatcher",
@@ -41,12 +42,14 @@
     "api-unitlength": "UnitLength",
     "api-unixepochtime": "UnixEpochTime",
     "doc-design-bundles": "Resource bundles",
-    "doc-design": "Design",
+    "doc-design-caching": "Caching",
+    "doc-faq": "Rationale",
+    "doc-goals": "Goals",
     "doc-index": "Overview",
-    "doc-init": "Initialization",
     "doc-locales": "Locales",
     "doc-math-example-factorial": "Example: factorial",
     "doc-math": "Arbitrary Precision",
+    "doc-quickstart": "Quick start",
     "Docs": "Docs",
     "API": "API",
     "Live": "Live",
