--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -3,7 +3,7 @@
   "localized-strings": {
     "next": "Next",
     "previous": "Previous",
-    "tagline": "CLDR internationalization in Typescript, batteries-included",
+    "tagline": "CLDR internationalization and localization in Typescript, batteries-included",
     "api-availablelocales": "availableLocales",
     "api-buddhistdate": "BuddhistDate",
     "api-bundle": "Bundle",
@@ -33,21 +33,24 @@
     "api-locale": "Locale",
     "api-localematcher": "LocaleMatcher",
     "api-numbersystemtype": "NumberSystemType",
-    "api-parselocale": "parseLocale",
+    "api-parselanguagetag": "parseLanguageTag",
     "api-persiandate": "PersianDate",
     "api-quantity": "Quantity",
     "api-relativetimeformatoptions": "RelativeTimeFormatOptions",
+    "api-resolvelocale": "resolveLocale",
     "api-roundingmodetype": "RoundingModeType",
     "api-unitformatoptions": "UnitFormatOptions",
     "api-unitlength": "UnitLength",
-    "api-unixepochtime": "UnixEpochTime",
+    "api-zoneddatetime": "ZonedDateTime",
     "doc-calendar-examples": "Examples",
     "doc-design-bundles": "Resource bundles",
     "doc-design-caching": "Caching",
     "doc-faq": "Rationale",
     "doc-goals": "Goals",
     "doc-index": "Overview",
-    "doc-locales": "Locales",
+    "doc-locales-enumerating": "Enumerating",
+    "doc-locales-matching": "Language matching",
+    "doc-locales-parsing": "Parsing and resolution",
     "doc-math-example-factorial": "Example: factorial",
     "doc-math": "Arbitrary Precision",
     "doc-quickstart": "Quick start",
