More docs, style changes.

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -8,6 +8,7 @@
     "api-buddhistdate": "BuddhistDate",
     "api-bundle": "Bundle",
     "api-calendardate": "CalendarDate",
+    "api-calendardatefields": "CalendarDateFields",
     "api-calendartype": "CalendarType",
     "api-cldr-calendars": "CLDR.Calendars",
     "api-cldr-general": "CLDR.General",
@@ -48,7 +49,6 @@
     "doc-faq": "Rationale",
     "doc-goals": "Goals",
     "doc-index": "Overview",
-    "doc-locales-enumerating": "Enumerating",
     "doc-locales-matching": "Language matching",
     "doc-locales-parsing": "Parsing and resolution",
     "doc-math-example-factorial": "Example: factorial",
