Continue reorg, add code sandbox example.

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -43,14 +43,15 @@
     "api-unitformatoptions": "UnitFormatOptions",
     "api-unitlength": "UnitLength",
     "api-zoneddatetime": "ZonedDateTime",
-    "doc-calendar-examples": "Examples",
+    "doc-calendar-examples": "Example: date formatting",
     "doc-design-bundles": "Resource bundles",
     "doc-design-caching": "Caching",
     "doc-faq": "Rationale",
     "doc-goals": "Goals",
     "doc-index": "Overview",
     "doc-locales-matching": "Language matching",
-    "doc-locales-parsing": "Parsing and resolution",
+    "doc-locales-parsing": "Locale parsing",
+    "doc-locales-resolution": "Locale resolution",
     "doc-math-example-factorial": "Example: factorial",
     "doc-math": "Arbitrary Precision",
     "doc-quickstart": "Quick start",
