--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -21,9 +21,9 @@
     "api-currencyformatoptions": "CurrencyFormatOptions",
     "api-currencyformatstyletype": "CurrencyFormatStyleType",
     "api-currencytype": "CurrencyType",
-    "api-date-time-skeleton": "Date and time skeleton",
     "api-dateformatoptions": "DateFormatOptions",
     "api-dateintervalformatoptions": "DateIntervalFormatOptions",
+    "api-dateskeleton": "DateSkeleton",
     "api-datetimepatternfieldtype": "DateTimePatternFieldType",
     "api-decimal": "Decimal",
     "api-decimalconstants": "DecimalConstants",
