Add missing FormatWidthType enum, upgrade to 0.7.3

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -29,6 +29,7 @@
     "api-decimalconstants": "DecimalConstants",
     "api-decimalformatoptions": "DecimalFormatOptions",
     "api-decimalformatstyletype": "DecimalFormatStyleType",
+    "api-formatwidthtype": "FormatWidthType",
     "api-gregoriandate": "GregorianDate",
     "api-iso8601date": "ISO8601Date",
     "api-japanesedate": "JapaneseDate",
