Upgrade to 0.7.5; measurement system docs

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -38,6 +38,8 @@
     "api-locale": "Locale",
     "api-localematcher": "LocaleMatcher",
     "api-mathcontext": "MathContext",
+    "api-measurementcategory": "MeasurementCategory",
+    "api-measurementsystem": "MeasurementSystem",
     "api-numbersystemtype": "NumberSystemType",
     "api-parselanguagetag": "parseLanguageTag",
     "api-persiandate": "PersianDate",
