Decimal format options errors field

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -39,6 +39,7 @@
     "api-mathcontext": "MathContext",
     "api-measurementcategory": "MeasurementCategory",
     "api-measurementsystem": "MeasurementSystem",
+    "api-numberformaterrortype": "NumberFormatErrorType",
     "api-numbersystemtype": "NumberSystemType",
     "api-persiandate": "PersianDate",
     "api-quantity": "Quantity",
