--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -32,6 +32,7 @@
     "api-gregoriandate": "GregorianDate",
     "api-iso8601date": "ISO8601Date",
     "api-japanesedate": "JapaneseDate",
+    "api-languageidtype": "LanguageIdType",
     "api-languagetag": "LanguageTag",
     "api-listpatterntype": "ListPatternType",
     "api-locale": "Locale",
@@ -43,8 +44,10 @@
     "api-numbersystemtype": "NumberSystemType",
     "api-persiandate": "PersianDate",
     "api-quantity": "Quantity",
+    "api-regionidtype": "RegionIdType",
     "api-relativetimeformatoptions": "RelativeTimeFormatOptions",
     "api-roundingmodetype": "RoundingModeType",
+    "api-scriptidtype": "ScriptIdType",
     "api-timezonetype": "TimeZoneType",
     "api-unitformatoptions": "UnitFormatOptions",
     "api-unitlength": "UnitLength",
