--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -187,6 +187,189 @@
       },
       "doc-quickstart": {
         "title": "Quick start"
+      },
+      "version-0.8.17/version-0.8.17-api-buddhistdate": {
+        "title": "BuddhistDate"
+      },
+      "version-0.8.17/version-0.8.17-api-bundle": {
+        "title": "Bundle"
+      },
+      "version-0.8.17/version-0.8.17-api-calendardate": {
+        "title": "CalendarDate"
+      },
+      "version-0.8.17/version-0.8.17-api-calendardatefields": {
+        "title": "CalendarDateFields"
+      },
+      "version-0.8.17/version-0.8.17-api-calendartype": {
+        "title": "CalendarType"
+      },
+      "version-0.8.17/version-0.8.17-api-cldr-calendars": {
+        "title": "CLDR.Calendars"
+      },
+      "version-0.8.17/version-0.8.17-api-cldr-general": {
+        "title": "CLDR.General"
+      },
+      "version-0.8.17/version-0.8.17-api-cldr-locales": {
+        "title": "CLDR.Locales"
+      },
+      "version-0.8.17/version-0.8.17-api-cldr-numbers": {
+        "title": "CLDR.Numbers"
+      },
+      "version-0.8.17/version-0.8.17-api-cldr-units": {
+        "title": "CLDR.Units"
+      },
+      "version-0.8.17/version-0.8.17-api-cldr": {
+        "title": "CLDR"
+      },
+      "version-0.8.17/version-0.8.17-api-cldrframework": {
+        "title": "CLDRFramework"
+      },
+      "version-0.8.17/version-0.8.17-api-cldroptions": {
+        "title": "CLDROptions"
+      },
+      "version-0.8.17/version-0.8.17-api-currencyformatoptions": {
+        "title": "CurrencyFormatOptions"
+      },
+      "version-0.8.17/version-0.8.17-api-currencyformatstyletype": {
+        "title": "CurrencyFormatStyleType"
+      },
+      "version-0.8.17/version-0.8.17-api-currencytype": {
+        "title": "CurrencyType"
+      },
+      "version-0.8.17/version-0.8.17-api-dateformatoptions": {
+        "title": "DateFormatOptions"
+      },
+      "version-0.8.17/version-0.8.17-api-dateintervalformatoptions": {
+        "title": "DateIntervalFormatOptions"
+      },
+      "version-0.8.17/version-0.8.17-api-dateskeleton": {
+        "title": "DateSkeleton"
+      },
+      "version-0.8.17/version-0.8.17-api-datetimepatternfieldtype": {
+        "title": "DateTimePatternFieldType"
+      },
+      "version-0.8.17/version-0.8.17-api-decimal": {
+        "title": "Decimal"
+      },
+      "version-0.8.17/version-0.8.17-api-decimalconstants": {
+        "title": "DecimalConstants"
+      },
+      "version-0.8.17/version-0.8.17-api-decimalformatoptions": {
+        "title": "DecimalFormatOptions"
+      },
+      "version-0.8.17/version-0.8.17-api-decimalformatstyletype": {
+        "title": "DecimalFormatStyleType"
+      },
+      "version-0.8.17/version-0.8.17-api-formatwidthtype": {
+        "title": "FormatWidthType"
+      },
+      "version-0.8.17/version-0.8.17-api-gregoriandate": {
+        "title": "GregorianDate"
+      },
+      "version-0.8.17/version-0.8.17-api-iso8601date": {
+        "title": "ISO8601Date"
+      },
+      "version-0.8.17/version-0.8.17-api-japanesedate": {
+        "title": "JapaneseDate"
+      },
+      "version-0.8.17/version-0.8.17-api-languageidtype": {
+        "title": "LanguageIdType"
+      },
+      "version-0.8.17/version-0.8.17-api-languagetag": {
+        "title": "LanguageTag"
+      },
+      "version-0.8.17/version-0.8.17-api-listpatterntype": {
+        "title": "ListPatternType"
+      },
+      "version-0.8.17/version-0.8.17-api-locale": {
+        "title": "Locale"
+      },
+      "version-0.8.17/version-0.8.17-api-localematcher": {
+        "title": "LocaleMatcher"
+      },
+      "version-0.8.17/version-0.8.17-api-mathcontext": {
+        "title": "MathContext"
+      },
+      "version-0.8.17/version-0.8.17-api-measurementcategory": {
+        "title": "MeasurementCategory"
+      },
+      "version-0.8.17/version-0.8.17-api-measurementsystem": {
+        "title": "MeasurementSystem"
+      },
+      "version-0.8.17/version-0.8.17-api-numberformaterrortype": {
+        "title": "NumberFormatErrorType"
+      },
+      "version-0.8.17/version-0.8.17-api-numbersystemtype": {
+        "title": "NumberSystemType"
+      },
+      "version-0.8.17/version-0.8.17-api-persiandate": {
+        "title": "PersianDate"
+      },
+      "version-0.8.17/version-0.8.17-api-quantity": {
+        "title": "Quantity"
+      },
+      "version-0.8.17/version-0.8.17-api-regionidtype": {
+        "title": "RegionIdType"
+      },
+      "version-0.8.17/version-0.8.17-api-relativetimeformatoptions": {
+        "title": "RelativeTimeFormatOptions"
+      },
+      "version-0.8.17/version-0.8.17-api-roundingmodetype": {
+        "title": "RoundingModeType"
+      },
+      "version-0.8.17/version-0.8.17-api-scriptidtype": {
+        "title": "ScriptIdType"
+      },
+      "version-0.8.17/version-0.8.17-api-timezonetype": {
+        "title": "TimeZoneType"
+      },
+      "version-0.8.17/version-0.8.17-api-unitformatoptions": {
+        "title": "UnitFormatOptions"
+      },
+      "version-0.8.17/version-0.8.17-api-unitlength": {
+        "title": "UnitLength"
+      },
+      "version-0.8.17/version-0.8.17-api-unittype": {
+        "title": "UnitType"
+      },
+      "version-0.8.17/version-0.8.17-api-zoneddatetime": {
+        "title": "ZonedDateTime"
+      },
+      "version-0.8.17/version-0.8.17-doc-calendar-examples": {
+        "title": "Example: date formatting"
+      },
+      "version-0.8.17/version-0.8.17-doc-design-bundles": {
+        "title": "Resource bundles"
+      },
+      "version-0.8.17/version-0.8.17-doc-design-caching": {
+        "title": "Caching"
+      },
+      "version-0.8.17/version-0.8.17-doc-faq": {
+        "title": "Rationale"
+      },
+      "version-0.8.17/version-0.8.17-doc-goals": {
+        "title": "Goals"
+      },
+      "version-0.8.17/version-0.8.17-doc-index": {
+        "title": "Overview"
+      },
+      "version-0.8.17/version-0.8.17-doc-locales-matching": {
+        "title": "Language matching"
+      },
+      "version-0.8.17/version-0.8.17-doc-locales-parsing": {
+        "title": "Locale parsing"
+      },
+      "version-0.8.17/version-0.8.17-doc-locales-resolution": {
+        "title": "Locale resolution"
+      },
+      "version-0.8.17/version-0.8.17-doc-math-example-factorial": {
+        "title": "Example: factorial"
+      },
+      "version-0.8.17/version-0.8.17-doc-math": {
+        "title": "Arbitrary Precision"
+      },
+      "version-0.8.17/version-0.8.17-doc-quickstart": {
+        "title": "Quick start"
       }
     },
     "links": {
