--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -367,6 +367,18 @@
       },
       "version-0.8.17/version-0.8.17-doc-quickstart": {
         "title": "Quick start"
+      },
+      "version-0.9.0/version-0.9.0-api-cldr-general": {
+        "title": "CLDR.General"
+      },
+      "version-0.9.0/version-0.9.0-api-cldr": {
+        "title": "CLDR"
+      },
+      "version-0.9.0/version-0.9.0-api-currencyformatoptions": {
+        "title": "CurrencyFormatOptions"
+      },
+      "version-0.9.0/version-0.9.0-api-decimalformatoptions": {
+        "title": "DecimalFormatOptions"
       }
     },
     "links": {
