--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -385,6 +385,15 @@
       },
       "version-0.9.0/version-0.9.0-api-decimalformatstyletype": {
         "title": "DecimalFormatStyleType"
+      },
+      "version-0.9.1/version-0.9.1-api-cldr-general": {
+        "title": "CLDR.General"
+      },
+      "version-0.9.1/version-0.9.1-api-regionidtype": {
+        "title": "RegionIdType"
+      },
+      "version-0.9.1/version-0.9.1-doc-locales-parsing": {
+        "title": "Locale parsing"
       }
     },
     "links": {
