Filling in missing docs

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -62,6 +62,9 @@
       "api-dateintervalformatoptions": {
         "title": "DateIntervalFormatOptions"
       },
+      "api-daterawformatoptions": {
+        "title": "DateRawFormatOptions"
+      },
       "api-dateskeleton": {
         "title": "DateSkeleton"
       },
