--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -290,6 +290,18 @@
       "version-0.11.4/version-0.11.4-api-timezoneinfo": {
         "title": "TimeZoneInfo"
       },
+      "version-0.12.1/version-0.12.1-api-cldr-numbers": {
+        "title": "CLDR.Numbers"
+      },
+      "version-0.12.1/version-0.12.1-api-cldr-units": {
+        "title": "CLDR.Units"
+      },
+      "version-0.12.1/version-0.12.1-api-decimal": {
+        "title": "Decimal"
+      },
+      "version-0.12.1/version-0.12.1-api-roundingmodetype": {
+        "title": "RoundingModeType"
+      },
       "version-0.8.17/version-0.8.17-api-buddhistdate": {
         "title": "BuddhistDate"
       },
