Add initial schema customization docs

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -152,6 +152,9 @@
       "api-roundingmodetype": {
         "title": "RoundingModeType"
       },
+      "api-schemaconfig": {
+        "title": "SchemaConfig"
+      },
       "api-scriptidtype": {
         "title": "ScriptIdType"
       },
