--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -311,6 +311,9 @@
       "version-0.13.4/version-0.13.4-api-schemaconfig": {
         "title": "SchemaConfig"
       },
+      "version-0.13.6/version-0.13.6-doc-index": {
+        "title": "Overview"
+      },
       "version-0.8.17/version-0.8.17-api-buddhistdate": {
         "title": "BuddhistDate"
       },
