Update links in number types

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -53,6 +53,9 @@
       "api-currencyformatstyletype": {
         "title": "CurrencyFormatStyleType"
       },
+      "api-currencysymbolwidthtype": {
+        "title": "CurrencySymbolWidthType"
+      },
       "api-currencytype": {
         "title": "CurrencyType"
       },
