Clarify unit format options, style types

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -170,6 +170,9 @@
       "api-unitformatoptions": {
         "title": "UnitFormatOptions"
       },
+      "api-unitformatstyletype": {
+        "title": "UnitFormatStyleType"
+      },
       "api-unitlength": {
         "title": "UnitLength"
       },
